Use numbering scheme for pages to give persistent URL scheme

--- a/1/index.html
+++ b/1/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Manchester Tech Nights</title>
     <meta name="description" content="Manchester Tech Nights is a get together for developers in the North West to get together, share best practice and find out about we're all getting up to">
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    <link rel="stylesheet" type="text/css" href="../styles/style.css">
 </head>
 <body>
 <article itemscope itemtype="http://schema.org/Event">
