Update talk names

--- a/1/index.html
+++ b/1/index.html
@@ -33,11 +33,11 @@
         <h1>Headline Speakers</h1>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Dan Hett</span></h2>
-            <p itemprop="name"><a href="http://madlab.org.uk/content/game-jam/">Manchester Game Jam</a> (description to be finalised)</p>
-        </div>
-        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">TBC</span></h2>
-            <p>TBC</p>
+            <p itemprop="name">Disregard rulebook, make videogames!</p>
+            <p itemprop="description">
+                Dan Hett works for BBC Children's and organises the <a href="http://twitter.com/MCRGameJam">MCRGameJam</a>
+                and will be giving us a tour of general game-making and rapid prototyping chaos.
+            </p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">TBC</span></h2>
@@ -48,7 +48,7 @@
         <h1>Lightning Talks</h1>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Rosie Campbell</span></h2>
-            <p>(description to be finalised)</p>
+            <p itemprop="name">Using game theory to survive in a hungry tribe</p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Ian Forrester</span></h2>
@@ -56,7 +56,11 @@
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">You?</h2>
-            <p itemprop="description">There are 30 second slots available on the night for anyone who wants to talk, just speak to an organiser on the night!</p>
+            <p itemprop="description">
+                There are 5 minute 'lightning' and 30 second 'elevator' slots available on the night for anyone who wants
+                to talk, just speak to an organiser on the night for the elevator slots, or
+                <a href="mailto:chris@manchestertechnights.org">contact us</a> about the lightning slots.
+            </p>
         </div>
     </section>
 </article>
