Add second headline speaker

--- a/1/index.html
+++ b/1/index.html
@@ -32,16 +32,19 @@
     <section>
         <h1>Headline Speakers</h1>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
+            <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Andrew Santus</span></h2>
+            <p itemprop="name">Integration Architecture</p>
+            <p itemprop="description">
+                Andrew Santus is Head of IT at Boohoo.com and a highly experienced Technology Leader / Strategist with a proven track record in designing &amp; delivering large enterprise solutions and transformation programmes at / with C level positions. Specialist knowledge of e-commerce (retail) and e-gaming sectors.
+            </p>
+        </div>
+        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Dan Hett</span></h2>
             <p itemprop="name">Disregard rulebook, make videogames!</p>
             <p itemprop="description">
                 Dan Hett works for BBC Children's and organises the <a href="http://twitter.com/MCRGameJam">MCRGameJam</a>
                 and will be giving us a tour of general game-making and rapid prototyping chaos.
             </p>
-        </div>
-        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">TBC</span></h2>
-            <p>TBC</p>
         </div>
     </section>
     <section>
@@ -66,7 +69,7 @@
 </article>
 <footer>
     <p>
-        Manchester Tech Nights is organised by Mike Hall and <a href="mailto:chris@pling.org.uk">Chris Northwood</a> and is dedicated to being an inclusive
+        Manchester Tech Nights is organised by Mike Hall (<a href="https://twitter.com/mikehallhn">@mikehallhn</a>)  and <a href="mailto:chris@pling.org.uk">Chris Northwood</a> (<a href="https://twitter.com/cnorthwood">@cnorthwood</a>) and is dedicated to being an inclusive
         night with a welcoming atmosphere for everyone. If you have any concerns, please contact the organisers.
     </p>
 </footer>
