--- a/1/index.html
+++ b/1/index.html
@@ -23,7 +23,8 @@
             </a>
         </h2>
         <p itemprop="description">
-            Manchester Tech Nights is a new meetup aimed at more technical members of Manchester's technology community.
+            Manchester Tech Nights is a new meetup aimed at Manchester's technology community, either the people who are
+            making Manchester's tech scene what it is, or just those who are interested and want to keep up-to-date.
             We want to find out what's going on across the north west, regardless of language. The night kicks off with
             a headline talk, followed by a series of shorter lightning talks and then an informal chat between attendees.
         </p>
@@ -62,14 +63,14 @@
             <p itemprop="description">
                 There are 5 minute 'lightning' and 30 second 'elevator' slots available on the night for anyone who wants
                 to talk, just speak to an organiser on the night for the elevator slots, or
-                <a href="mailto:chris@manchestertechnights.org">contact us</a> about the lightning slots.
+                <a href="mailto:hello@manchestertechnights.org">contact us</a> about the lightning slots.
             </p>
         </div>
     </section>
 </article>
 <footer>
     <p>
-        Manchester Tech Nights is organised by Mike Hall (<a href="https://twitter.com/mikehallhn">@mikehallhn</a>)  and <a href="mailto:chris@pling.org.uk">Chris Northwood</a> (<a href="https://twitter.com/cnorthwood">@cnorthwood</a>) and is dedicated to being an inclusive
+        Manchester Tech Nights is organised by <a href="mailto:michael@manchestertechnights.org">Michael Hall</a> (<a href="https://twitter.com/mikehallhn">@mikehallhn</a>)  and <a href="mailto:chris@pling.org.uk">Chris Northwood</a> (<a href="https://twitter.com/cnorthwood">@cnorthwood</a>) and is dedicated to being an inclusive
         night with a welcoming atmosphere for everyone. If you have any concerns, please contact the organisers.
     </p>
 </footer>
