--- a/1/index.html
+++ b/1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Manchester Tech Nights</title>
-    <meta name="description" content="Manchester Tech Nights is a get together for developers in the North West to get together, share best practice and find out about we're all getting up to">
+    <meta name="description" content="Manchester Tech Nights is a get together for the Manchester's technical community to get together, share best practice and find out about we're all getting up to">
     <link rel="stylesheet" type="text/css" href="../styles/style.css">
     <meta name="viewport" content="width=device-width">
 </head>
@@ -36,7 +36,9 @@
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Andrew Santus</span></h2>
             <p itemprop="name">Integration Architecture</p>
             <p itemprop="description">
-                Andrew Santus is Head of IT at Boohoo.com and a highly experienced Technology Leader / Strategist with a proven track record in designing &amp; delivering large enterprise solutions and transformation programmes at / with C level positions. Specialist knowledge of e-commerce (retail) and e-gaming sectors.
+                Andrew Santus is Head of IT at Boohoo.com and a highly experienced Technology Leader / Strategist with
+                a proven track record in designing &amp; delivering large enterprise solutions and transformation programmes
+                at / with C level positions. Specialist knowledge of e-commerce (retail) and e-gaming sectors.
             </p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
@@ -55,8 +57,12 @@
             <p itemprop="name">Using game theory to survive in a hungry tribe</p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
+            <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Simon Reekie</span></h2>
+            <p itemprop="name">The value of aligning the test and dev relationship</p>
+        </div>
+        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Ian Forrester</span></h2>
-            <p itemprop="name">The beauty of XML and the semantic web</p>
+            <p itemprop="name">Quantified Self</p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">You?</h2>
@@ -70,7 +76,9 @@
 </article>
 <footer>
     <p>
-        Manchester Tech Nights is organised by <a href="mailto:michael@manchestertechnights.org">Michael Hall</a> (<a href="https://twitter.com/mikehallhn">@mikehallhn</a>)  and <a href="mailto:chris@pling.org.uk">Chris Northwood</a> (<a href="https://twitter.com/cnorthwood">@cnorthwood</a>) and is dedicated to being an inclusive
+        Manchester Tech Nights is organised by <a href="mailto:michael@manchestertechnights.org">Michael Hall</a>
+        (<a href="https://twitter.com/mikehallhn">@mikehallhn</a>) and <a href="mailto:chris@pling.org.uk">Chris Northwood</a>
+        (<a href="https://twitter.com/cnorthwood">@cnorthwood</a>) and is dedicated to being an inclusive
         night with a welcoming atmosphere for everyone. If you have any concerns, please contact the organisers.
     </p>
 </footer>
