Update lightning talks

--- a/1/index.html
+++ b/1/index.html
@@ -53,8 +53,8 @@
     <section>
         <h1>Lightning Talks</h1>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Rosie Campbell</span></h2>
-            <p itemprop="name">Using game theory to survive in a hungry tribe</p>
+            <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Rob Randell</span></h2>
+            <p itemprop="name">Responsive Web Design</p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Simon Reekie</span></h2>
