Add sponsor logo

--- a/1/index.html
+++ b/1/index.html
@@ -29,18 +29,10 @@
             a headline talk, followed by a series of shorter lightning talks and then an informal chat between attendees.
         </p>
         <p><a href="http://lanyrd.com/2013/manchester-tech-nights/">Attend on Lanyrd</a></p>
+        <p>Manchester Tech Nights would like to thank <a href="http://www.ukfast.com/">UKFast</a> for sponsoring our inaugural event!</p>
     </header>
     <section>
         <h1>Headline Speakers</h1>
-        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Andrew Santus</span></h2>
-            <p itemprop="name">Integration Architecture</p>
-            <p itemprop="description">
-                Andrew Santus is Head of IT at Boohoo.com and a highly experienced Technology Leader / Strategist with
-                a proven track record in designing &amp; delivering large enterprise solutions and transformation programmes
-                at / with C level positions. Specialist knowledge of e-commerce (retail) and e-gaming sectors.
-            </p>
-        </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Dan Hett</span></h2>
             <p itemprop="name">Disregard rulebook, make videogames!</p>
