Add specific rules about reporting to CoC

--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -9,17 +9,24 @@
 <article class="code-of-conduct">
     <h1>Code of Conduct</h1>
 
-    <p>We want Manchester Tech Nights to embrace all parts of the tech community, so we've got a basic set of rules to help make this an inclusive place.</p>
+    <p>We want Manchester Tech Nights to embrace all parts of the tech community, so we've got a basic set of rules to
+        help make this an inclusive place.</p>
     <ul>
         <li>We want to be inclusive; do not engage in homophobic, racist, transphobic, ableist, sexist, or otherwise
-            exclusionary behavior. Don't make exclusionary jokes. Don't even make them "ironically".</li>
-        <li>Don't harass people. Unconsented physical contact or sexual attention is harrassment. Dressing or acting in a certain way is not consent.</li>
+            exclusionary behavior. Don't make exclusionary jokes. Don't even make them "ironically". </li>
+        <li>Don't harass people. Unconsented physical contact or sexual attention is harrassment. Dressing or acting in a certain way is not consent. </li>
         <li>Aggression and elitism are unwelcome here &mdash; technology is not a competition.</li>
-        <li>Although some events include sponsored alcohol, there is no expectation or pressure to drink alcohol. Don't question anyone's choice of drink. Soft drink alternatives will be provided.</li>
+        <li>Although some events include sponsored alcohol, there is no expectation or pressure to drink alcohol.
+            Don't question anyone's choice of drink. Soft drink alternatives will be provided. </li>
         <li>We'd rather you ask about gender than assume, and if you get it wrong, apologise, and use what they prefer.</li>
         <li>We think feminism is a good thing. Discussion of how to make technology more inclusive is welcome. Claims that this "has gone too far" aren't.</li>
     </ul>
     <p>We ask that all presenters bear this mind and we ask that presentations are kept 'PG' rated.</p>
+
+    <p>Attendees violating these rules will be ask to leave the event and will not be welcome back in future. If you are
+        subject to, or observe, any harrassment, or have any other concerns - please contact Chris Northwood or Michael
+        Hall on the night, or contact us afterwards at <a href="mailto:hello@manchestertechnights.org">hello@manchestertechnights.org</a>.
+        Any reports will be dealt with discretely and in confidence.</p>
 
     <p>With thanks to <a href="http://computeranonymous.org/">Computer Anonymous</a> for the rules.</p>
 </article>
