Add lightning talk

--- a/2/index.html
+++ b/2/index.html
@@ -44,6 +44,10 @@
     <section>
         <h1>Lightning Talks</h1>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
+            <h2 itemprop="name">Clients demand technology to be more personal than ever</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Andrew Doyle</span></p>
+        </div>
+        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2>TBC</h2>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
