Add Rachael as speaker

--- a/2/index.html
+++ b/2/index.html
@@ -48,6 +48,10 @@
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Andrew Doyle</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
+            <h2 itemprop="name">Art Map Project</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Rachael Burns</span></p>
+        </div>
+        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2>TBC</h2>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
