--- a/2/index.html
+++ b/2/index.html
@@ -52,7 +52,8 @@
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Rachael Burns</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2>TBC</h2>
+            <h2 itemprop="name">Technology in Housing "embracing the opportunity"</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Matt Leach</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">You?</h2>
