Add lightning talk

--- a/2/index.html
+++ b/2/index.html
@@ -29,7 +29,7 @@
             a headline talk, followed by a series of shorter lightning talks and then an informal chat between attendees.
         </p>
         <p><a href="http://lanyrd.com/2014/mcrtechnights/">Attend on Lanyrd</a></p>
-        <p>Manchester Tech Nights would like to thank <a href="http://www.csl-sofas.co.uk/">CSL Sofas</a> for sponsoring our second event!</p>
+        <p>Manchester Tech Nights would like to thank <a href="http://www.boohoo.com/">Boohoo.com</a> for sponsoring our second event!</p>
     </header>
     <section>
         <h1>Headline Speakers</h1>
@@ -54,6 +54,10 @@
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">Technology in Housing "embracing the opportunity"</h2>
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Matt Leach</span></p>
+        </div>
+        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
+            <h2 itemprop="name">3D Printing</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Matthew Shotton</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">You?</h2>
