--- a/2/index.html
+++ b/2/index.html
@@ -29,7 +29,7 @@
             a headline talk, followed by a series of shorter lightning talks and then an informal chat between attendees.
         </p>
         <p><a href="http://lanyrd.com/2014/mcrtechnights/">Attend on Lanyrd</a></p>
-        <p>Manchester Tech Nights would like to thank <a href="http://www.boohoo.com/">Boohoo.com</a> for sponsoring our second event!</p>
+        <p class="sponsor">Manchester Tech Nights would like to thank <a href="http://www.boohoo.com/">Boohoo.com</a> for sponsoring our second event!</p>
     </header>
     <section>
         <h1>Headline Speakers</h1>
