Add tech nights #3 page

--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -23,8 +23,8 @@
     </ul>
     <p>We ask that all presenters bear this mind and we ask that presentations are kept 'PG' rated.</p>
 
-    <p>Attendees violating these rules will be ask to leave the event and will not be welcome back in future. If you are
-        subject to, or observe, any harrassment, or have any other concerns - please contact Chris Northwood or Michael
+    <p>Attendees violating these rules will be asked to leave the event and will not be welcome back in future. If you are
+        subject to, or observe, any harassment, or have any other concerns - please contact Chris Northwood or Michael
         Hall on the night, or contact us afterwards at <a href="mailto:hello@manchestertechnights.org">hello@manchestertechnights.org</a>.
         Any reports will be dealt with discretely and in confidence.</p>
 
