Add Geoff and Hannah to website

--- a/3/index.html
+++ b/3/index.html
@@ -42,7 +42,12 @@
     <section>
         <h1>Lightning Talks</h1>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2>TBC</h2>
+            <h2 itemprop="name">Tutorial design in video games (TBC)</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Hannah Bunce</span></p>
+        </div>
+        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
+            <h2 itemprop="name">Performance in front-end web design (TBC)</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Geoff Adams</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">You?</h2>
