Updating Hannah's talk

--- a/3/index.html
+++ b/3/index.html
@@ -42,7 +42,7 @@
     <section>
         <h1>Lightning Talks</h1>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2 itemprop="name">Tutorial design in video games (TBC)</h2>
+            <h2 itemprop="name">Tutorials for the Masses: Teaching Players How To Play</h2>
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Hannah Bunce</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
