Add new speaker

--- a/3/index.html
+++ b/3/index.html
@@ -50,6 +50,10 @@
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Geoff Adams</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
+            <h2 itemprop="name">Title TBC</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Elizabeth Clarke</span></p>
+        </div>
+        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">You?</h2>
             <p itemprop="description">
                 There are 5 minute 'lightning' and 30 second 'elevator' slots available on the night for anyone who wants
