Add new title for Mark's talk

--- a/3/index.html
+++ b/3/index.html
@@ -54,9 +54,13 @@
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Elizabeth Clarke</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
+            <h2 itemprop="name">How to create a Scaleable PhoneGap App</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Mark Wheeler</span></p>
+        </div>
+        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">You?</h2>
             <p itemprop="description">
-                There are 5 minute 'lightning' and 30 second 'elevator' slots available on the night for anyone who wants
+                There are 30 second 'elevator' slots available on the night for anyone who wants
                 to talk, just speak to an organiser on the night for the elevator slots, or
                 <a href="mailto:hello@manchestertechnights.org">contact us</a> about the lightning slots.
             </p>
