Add Bytemark logo

--- a/3/index.html
+++ b/3/index.html
@@ -30,15 +30,8 @@
             a headline talk, followed by a series of shorter lightning talks and then an informal chat between attendees.
         </p>
         <p><a href="http://lanyrd.com/2014/mcrtechnights-april/">Attend on Lanyrd</a></p>
-        <!--<p class="sponsor">Manchester Tech Nights would like to thank <a href="http://www.boohoo.com/">Boohoo.com</a> for sponsoring our second event!</p>-->
+        <p>Manchester Tech Nights would like to thank <a href="http://www.bytemark.co.uk/r/manchestertechnights">Bytemark Hosting</a> for sponsoring our third event!</p>
     </header>
-    <section>
-        <h1>Headline Speakers</h1>
-        <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2 itemprop="name">Legacy Thinking - We all need to take action</h2>
-            <p itemprop="description"><em itemprop="performer">Mia Chapman</em> is Founder and Director of Girl Geeks Ltd.</p>
-        </div>
-    </section>
     <section>
         <h1>Lightning Talks</h1>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
@@ -50,7 +43,7 @@
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Geoff Adams</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2 itemprop="name">Title TBC</h2>
+            <h2 itemprop="name">Will tackling the testosterone lure more ladies into tech?</h2>
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Elizabeth Clarke</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
