Add Laura Gordon as a speaker

--- a/4/index.html
+++ b/4/index.html
@@ -59,9 +59,8 @@
             <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Anirvan Chakaraborty</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
-            <h2>TBC</h2>
-            <p>A five minute slot is available on the night for anyone who's interested,
-                <a href="mailto:hello@manchestertechnights.org">e-mail us</a> to discuss!</p>
+            <h2 itemprop="name">Emotional Intelligence</h2>
+            <p itemprop="performer" itemscope itemtype="http://schema.org/Person"><span itemprop="name">Laura Gordon</span></p>
         </div>
         <div itemprop="subEvent" itemscope itemtype="http://schema.org/Event">
             <h2 itemprop="name">You?</h2>
